fix: change button to href so that link is visible at the bottom

--- a/src/features/Apiexplorer/Schema/HighlightCode/HighlightCode.module.scss
+++ b/src/features/Apiexplorer/Schema/HighlightCode/HighlightCode.module.scss
@@ -18,6 +18,9 @@
 }
 
 .schemaLink {
-  cursor: pointer;
   text-decoration: underline;
+  color: var(--ifm-link-white);
+  &:hover {
+    color: var(--ifm-link-white);
+  }
 }
